# openD

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.gplv2  README.md  Readme_exampleApps
doc/: CMakeLists.txt
doc/doxygen/: Doxyfile.in  architecture.dox  audio.dox  mainpage.dox  openD_stylesheet.css  protocol.dox  sf_header.html
doc/wiki/: Build-system.md  Home.md  Udp-message-format.md  build.md  examples.md
src/: CMakeLists.txt  opend.c  opend_api.h  opend_audio.c  opend_audio_api.h  opend_call.c  opend_call_api.h  opend_dataTypes.h  opend_hanfun.c  opend_hanfun_api.h  opend_mgmt.c  opend_mgmt_api.h  opend_sixlowpan.c  opend_sixlowpan_api.h  opend_sub.c  opend_sub_api.h  version.h.in
src/exampleApps/: CMakeLists.txt
src/exampleApps/fp_hanfun_alarm_rpi/: CMakeLists.txt  fp_hanfun_alarm.cpp
src/exampleApps/fp_hanfun_client/: fp_hanfun_app.cpp  fp_hanfun_app.h  main.cpp
src/exampleApps/fp_hanfun_client_rpi/: CMakeLists.txt  main.cpp  udp.c  udp.h
src/exampleApps/fp_hanfun_server_rpi/: CMakeLists.txt  fp_hanfun_app.cpp  fp_hanfun_app.h  main.cpp  udp_server.c  udp_server.h
src/exampleApps/fp_hanfun_socket_rpi/: CMakeLists.txt  devicelist.cpp  fp_hanfun_socket.cpp
src/exampleApps/fp_legacy/: CMakeLists.txt  opend_app_pp2fpConf_fp.c  opend_app_pp2fpConf_fpDialog.c
src/exampleApps/fp_legacy_client/: fp_legacy_app.cpp  main.cpp
src/exampleApps/fp_legacy_client_rpi/: CMakeLists.txt  fp_legacy_app.cpp  fp_legacy_app.h  main.cpp  udp.c  udp.h
src/exampleApps/fp_legacy_server_rpi/: CMakeLists.txt  fp_legacy_server.cpp  opend_app_pp2fpConf_fp.cpp  udp_server.c  udp_server.h
src/exampleApps/pp_hanfun_nucleo/: CMakeLists.txt  main_hanfun.cpp
src/exampleApps/pp_legacy_basiccall_nucleo/: CMakeLists.txt  opend_app_pp2fpConf_pp.c  pp_legacy_basiccall.c
src/exampleApps/pp_legacy_intercom_nucleo/: CMakeLists.txt  pp_legacy_intercom.c
src/exampleApps/pp_legacy_nucleo_intercom/: opend_app_pp2fpConf_pp.c
src/exampleApps/pp_legacy_rpi/: CMakeLists.txt  opend_app_pp2fpConf_pp.c
src/hanfun/: opend_hanfun_dataTypes.h
src/hanfun/interfaces/: opend_hanfun_iAlert.h  opend_hanfun_iColourControl.h  opend_hanfun_iDetector.h  opend_hanfun_iLevelControl.h  opend_hanfun_iOnOff.h  opend_hanfun_iSimpleAirPressure.h  opend_hanfun_iSimpleButton.h  opend_hanfun_iSimpleHumidity.h  opend_hanfun_iSimpleLightSensor.h  opend_hanfun_iSimplePowerMeter.h  opend_hanfun_iSimpleTemperature.h  opend_hanfun_iSimpleThermostat.h  opend_hanfun_iSimpleVisualEffects.h
src/hanfun/profiles/: opend_hanfun_pAcOutlet.h  opend_hanfun_pAcOutletWithPowerMetering.h  opend_hanfun_pAlertable.h  opend_hanfun_pColourBulb.h  opend_hanfun_pControlableThermostat.h  opend_hanfun_pDimmableColourBulb.h  opend_hanfun_pDimmableLight.h  opend_hanfun_pDimmerSwitch.h  opend_hanfun_pDoorBell.h  opend_hanfun_pDoorOpenCloseDetector.h  opend_hanfun_pEnvironmentMonitor.h  opend_hanfun_pFloodDetector.h  opend_hanfun_pGasDetector.h  opend_hanfun_pGlassBreakDetector.h  opend_hanfun_pMotionDetector.h  opend_hanfun_pSimpleAirPressureSensor.h  opend_hanfun_pSimpleButton.h  opend_hanfun_pSimpleDetector.h  opend_hanfun_pSimpleDoorLock.h  opend_hanfun_pSimpleHumiditySensor.h  opend_hanfun_pSimpleLed.h  opend_hanfun_pSimpleLevelControl.h  opend_hanfun_pSimpleLevelControlSwitch.h  opend_hanfun_pSimpleLevelControllable.h  opend_hanfun_pSimpleLevelControllableSwitchable.h  opend_hanfun_pSimpleLight.h  opend_hanfun_pSimpleLightSensor.h  opend_hanfun_pSimpleOnOffSwitch.h  opend_hanfun_pSimpleOnOffSwitchable.h  opend_hanfun_pSimplePendant.h  opend_hanfun_pSimplePowerMeter.h  opend_hanfun_pSimpleTemperatureSensor.h  opend_hanfun_pSiren.h  opend_hanfun_pSmokeDetector.h  opend_hanfun_pUserInterfaceLock.h  opend_hanfun_pVibrationDetector.h  opend_hanfun_pWindowOpenCloseDetector.h
src/hanfun_lib/: .bump_version  .cproject  .gitmodules  .project  CMakeLists.txt  CMakeLists.txt_origi  Changelog  FAQ.md  LICENSE  README.md  RELEASE_NOTES.md  config.h.in  hanfun.patch  version.h.in
src/hanfun_lib/Linux_Debug/: makefile  sources.mk
src/hanfun_lib/apps/: CMakeLists.txt  application.h  base.cpp  base.h  base_app.cpp  common.cpp  common.h  example_01.cpp  example_02.cpp  example_03.cpp  example_04.cpp  example_05.cpp  example_06.cpp  example_07.cpp  example_08.cpp  jsoncpp.cpp  localloop.h  main.cpp  node.cpp  node.h  node_app.cpp  transport.cpp  transport.h
src/hanfun_lib/cmake/: compiler.cmake  config-version.cmake.in  config.cmake.in  options.cmake  package.cmake
src/hanfun_lib/doc/: API.doxyfile.in  CMakeLists.txt  getting_started.dox
src/hanfun_lib/hanfun/: version.h
src/hanfun_lib/inc/: hanfun.h
src/hanfun_lib/scripts/: formatCode.sh  make_release.sh  uncrustify.cfg
src/hanfun_lib/src/: CMakeLists.txt  attributes.cpp  common.cpp  debug.cpp  devices.cpp  dlg_extra.cpp  interfaces.cpp  profiles.cpp  protocol.cpp  uids.cpp  units.cpp
src/hanfun_lib/tests/: CMakeLists.txt  config.h.in  test_common.cpp  test_devices.cpp  test_helper.cpp  test_helper.h  test_interfaces.cpp  test_profiles.cpp  test_protocol.cpp  test_transport.cpp  test_units.cpp
src/hardware/: CMakeLists.txt
src/hardware/boards/: CMakeLists.txt
src/hardware/low-level-api/: CMakeLists.txt  opend_ll.h  opend_ll_gpio.h  opend_ll_serial.h
src/hardware/platform/: CMakeLists.txt
src/opend/: CMakeLists.txt  opend_api.h  opend_audio_api.h  opend_audio_types.h  opend_call_api.h  opend_call_types.h  opend_dataTypes.h  opend_hanfun_api.h  opend_hanfun_api_fp.h  opend_hanfun_api_pp.h  opend_hanfun_types.h  opend_hanfunlib_api_pp.h  opend_mgmt_api.h  opend_mgmt_types.h  opend_sixlowpan.c  opend_sixlowpan_api.h  opend_sub_api.h  opend_sub_types.h
src/opend/dialog/: CMakeLists.txt
src/opend/dspg/: CMakeLists.txt
src/opend/hanfun/: opend_hanfun_dataTypes.h
src/opend/prv/: opend.h  (+5 more)
src/utils/: CMakeLists.txt  messageManager.h  msManager.c  msManager.h  stateManager.c  stateManager.h
unit-test/: CMakeLists.txt
unit-test/cmake-modules/: sfgtest-config.cmake  sfgtest-toolchain-config.cmake
unit-test/test_app/: test.cpp
unit-test/test_module/: CMakeLists.txt
(+834 files in other folders)
